--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bitstamp-cli",
   "version": "0.0.0",
   "description": "A command line interface application to talk with Bitstamp",
+  "scripts": {
+    "start": "babel-node ./src"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fvilers/bitstamp-cli.git"
@@ -21,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/fvilers/bitstamp-cli/issues"
   },
-  "homepage": "https://github.com/fvilers/bitstamp-cli#readme"
+  "homepage": "https://github.com/fvilers/bitstamp-cli#readme",
+  "devDependencies": {
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.6.1"
+  }
 }
