--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/fvilers/bitstamp-cli#readme",
   "dependencies": {
+    "bitstamp": "1.0.6",
     "yargs": "10.1.1"
   },
   "devDependencies": {
