--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/fvilers/bitstamp-cli#readme",
   "dependencies": {
     "bitstamp": "1.0.6",
+    "table": "4.0.2",
     "yargs": "10.1.1"
   },
   "devDependencies": {
