--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/fvilers/bitstamp-cli#readme",
   "dependencies": {
     "bitstamp": "1.0.6",
+    "lodash": "4.17.4",
     "table": "4.0.2",
     "yargs": "10.1.1"
   },
